# chaquopy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CREDITS.txt  Dockerfile  LICENSE.txt  README.githubweather  README.md  README_cryptography_38.md  README_cryptography_39.md  Voice assistant  app.dockerfile  base.dockerfile  build-maven.sh  build.gradle  chaquopy_netcdf4-4.9.2-1-py3-none-android_21_arm64_v8a.whl  demo.dockerfile  docker-entrypoint.sh  meta.yaml  pyproject.toml  seeit.build_wheel.changes  settings.gradle  setup.cfg
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/package1/: java.java
app/src/main/java/package1/package11/: java.java
app/src/main/java/package1/package12/: java.java
app/src/main/jni/: com_chaquo_python_demo_Repl.cpp
app/src/main/python/: demo_app.py  imp_rename_one.py  module1.py  pyobjecttest.py  python_test_suite.py  test.pth  test_array.py  test_conversion.py  test_exception.py  test_import.py  test_java_api.py  test_overload.py  test_proxy.py  test_reflect.py  test_signatures.py  test_thread.py  test_utils.py
app/src/main/python/chaquopy/demo/: ui_demo.py  utils.py
app/src/main/python/chaquopy/test/: test_android.py  test_array.py  test_conversion.py  test_exception.py  test_import.py  test_proxy.py  test_reflect.py  test_signatures.py  test_static_proxy.py  test_utils.py
app/src/main/python/imp_rename_two/: __init__.py  mod_three.py
app/src/main/python/namespace/: mod1.py
app/src/main/python/package1/: other_error.py  recursive_import_error.py  recursive_other_error.py  test_relative.py  test_relative_implicit.py  wildcard_java_lang.py
app/src/main/python/package1/package11/: __init__.py  test_relative.py
app/src/main/python/static_proxy/: method.py
app/src/main/res/layout/: activity_console.xml  activity_main.xml  activity_menu.xml  activity_repl.xml  activity_unit_test.xml  content_main.xml
app/src/main/res/layout-land/: activity_menu.xml
app/src/main/res/menu/: menu_main.xml  view_source.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: activity_main.xml
app/src/py2/res/values/: strings.xml
product/runtime/: .gitignore  CMakeLists.txt  README.md  build.gradle  cygwin.toolchain.cmake  javadoc-chaquo.css  javadoc.sh  make_proxy.py  perftest.sh  requirements-build.txt  requirements-docs.txt  requirements-run.txt  shell.sh
product/runtime/docs/sphinx/: android.rst  changelog.rst  conf.py  cross.rst  examples.rst  faq.rst  index.rst  java.rst  python.rst  versions.rst
product/runtime/docs/sphinx/_static/: chaquopy.css  chaquopy.js  sphinx-chaquo.css
product/runtime/docs/sphinx/_templates/: layout.html
product/runtime/docs/sphinx/changes/: +pip-update.feature.rst  +pkg_resources.feature.rst  1003.feature.rst  1027.removal.rst  1039.removal.rst  1083.bugfix.rst  1169.feature.rst  1171.feature.rst  1210.feature.rst  1211.feature.rst  1245.feature.rst  1266.bugfix.rst  1272.feature.rst  1289.bugfix.rst  1324.feature.rst  1338.bugfix.rst  1340.feature.rst  1350.feature.rst  1352.feature.rst  1353.feature.rst  1370.bugfix.rst  1373.removal.rst  1374.feature.rst  1383.feature.rst  1411.feature.rst  1411.removal.rst  1417.removal.rst  1424.feature.rst  1431.bugfix.rst  231.feature.1.rst  231.feature.2.rst  654.feature.rst  709.removal.rst  713.removal.rst  715.bugfix.rst  718.removal.rst  725.feature.rst  727.feature.rst  733.bugfix.rst  747.feature.rst  (+23 more)
product/runtime/src/main/c/: Python.c  alloca.h  android_platform.c  chaquopy_extra.h  chaquopy_java_extra.h  chaquopy_java_init.h  ieeefp.h  jni.h
product/runtime/src/main/cpp/: Python.cpp  ieeefp.h  jni_wrappers.h
product/runtime/src/main/python/: .gitignore  chaquopy_java.pyx
product/runtime/src/main/python/chaquopy/: __init__.py  chaquopy.pxd  chaquopy.pyx  class.pxi  config.py  conversion.pxi  env.pxi  jni.pxd  jni.pxi  jvm.pxi  jvm_desktop.pxi  jvm_dlopen.pxi  localref.pxi  proxy.pxi  reflect.py  signatures.py  utils.pxi
product/runtime/src/main/python/java/: __init__.py  android.pxi  array.pxi  chaquopy.pxd  chaquopy.pyx  chaquopy_android.pyx  class.pxi  config.py  conversion.pxi  env.pxi  exception.pxi  import.pxi  jni.pxd  jvm.pxi  overload.pxi  primitive.py  proxy.pxi  reflect.py  signature.pxi  signatures.py  utils.pxi
product/runtime/src/main/python/jnius/: config.pxi  jni.pxi  (+10 more)
product/runtime/src/test/python/: imp_test.py  libnon_package_data.so.1  module1.py  non_package_data.py  non_package_data.txt  pyobjecttest.py  test.pth  test_android.py  test_array.py  test_arrays.py  test_assignable.py  test_bad_declaration.py  test_basics.py  test_bytearray.py  test_cast.py  test_class_argument.py  test_conversion.py  test_enum.py  test_exception.py  test_exceptions.py  test_implementation.py  test_import.py  test_interface.py  test_java_api.py  test_jnitable_overflow.py  test_method_multiple_signatures.py  test_multidimension.py  test_output_args.py  test_overload.py  test_proxy.py  test_reflect.py  test_signature.py  test_signatures.py  test_simple.py  test_static_proxy.py  test_suite.py  test_thread.py  test_threads.py  test_utils.py
(+995 files in other folders)
